implementing tx history...